Fix Button text alignment and add label for alignments

--- a/src/blocks/button-maxi/style.scss
+++ b/src/blocks/button-maxi/style.scss
@@ -6,6 +6,7 @@ body.maxi-blocks--active .maxi-button-block {
 
 	&__content {
 		z-index: 1;
+		width: 100%;
 	}
 	&__button {
 		height: auto;
@@ -16,6 +17,7 @@ body.maxi-blocks--active .maxi-button-block {
 		&__text {
 			position: relative;
 			z-index: 1;
+			width: 100%;
 		}
 
 		&--icon-left {
